--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "lib de JS com TDD",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepush": "npm run lint",
+    "lint": "./node_modules/.bin/eslint src/*.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/gabrieldarezzo/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/gabrieldarezzo/js-tdd-course#readme"
+  "homepage": "https://github.com/gabrieldarezzo/js-tdd-course#readme",
+  "devDependencies": {
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
+    "husky": "^0.14.3"
+  }
 }
