--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: node_js
 node_js:
-  - "7"
-cache:
-  directories:
-  "node_modules"
-
-before_script:
-  - npm run build:all
-after_script:
-  - npm run test:coverage
-
-
+  - "7.0"
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+addons:
+  firefox: "29.0"
