Add Suport coverrals

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "./node_modules/.bin/eslint src/*.js",
     "linttest": "./node_modules/.bin/eslint tests/*.js",
     "test:coverage": "nyc npm test",
+    "coveralls": "npm run test:coverage && nyc report --reporter=lcov test | coveralls",
     "prepush": "npm run lint"
   },
   "nyc": {
@@ -50,6 +51,7 @@
     "babel-preset-es2015-native-modules": "^6.9.4",
     "babel-register": "^6.26.0",
     "chai": "^4.1.1",
+    "coveralls": "^2.13.1",
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
