--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "js-tdd-course",
-  "version": "1.0.2",
+  "name": "spotify-api",
+  "version": "1.0.5",
   "description": "lib de JS com TDD",
   "main": "lib/index.js",
   "scripts": {
